--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,76 @@
+#google-btn {
+  border-radius: 0px;
+}
+
+#signIn {
+  margin-top: 6%;
+  border-radius: 0px;
+}
+
+#center-title {
+  text-align: center;
+}
+
+#thumbnail {
+  margin-top: 7px;
+}
+
+#username {
+  /* padding-top: 12%; */
+  margin-right: 30px;
+  margin-left: 10px;  
+  font-size: 20px;
+}
+
+#h-title {
+  padding-top: 7px;
+}
+
+#middleContent {
+  position: absolute;
+  left: 50;
+}
+
+#options {
+  /* padding-top: 10px; */
+  margin: 0px 10px;
+}
+
+#content {
+  padding-top: 2%;
+  text-align: center;
+  padding-bottom: 4%;
+}
+
+footer {
+  background: #263238;
+  color: #eceff1;
+}
+
+#div-title {
+  height: 53px;
+  background-color: #006064;
+}
+
+#footer {
+  position: absolute;
+  bottom:0;
+  width:100%;
+}
+
+#sign-div {
+  margin: auto;
+  margin-top: 5%;
+  max-width: 300px;
+  text-align: center;
+  /* border: 2px solid #f8f8f8; */
+  /* background-color: #f8f8f8; */
+  font-size: 18px;
+  line-height: 1.5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/********************************************************************/
 #title {
 	letter-spacing: 3px;
 	color: #3399ff;
@@ -11,6 +84,9 @@
 	font-size: 60px;
 	text-shadow: 2px 2px 4px #1a1a1a;
 	margin-left: 33.6%;
+}
+#title3 {
+  margin-left: 1%;
 }
 #img {
 	float: left;
@@ -201,7 +277,8 @@ mark {
 
 #div {
 	display: inline-block;
-	max-width: 800px;
+  max-width: 800px;
+  margin-bottom: 2%;
   padding: 14px 30px;
   border: 2px solid #f8f8f8;
   background-color: #f8f8f8;
@@ -235,5 +312,5 @@ mark {
 .highlight { background-color: yellow; }
 
 body {
-    background-color: #e6e6e6;
+    background-color: #eceff1;
 }
