--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,10 @@
   0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+#commentsDiv {
+  margin-top: 20px;
+}
+
 #comments {
   border: 2px solid #f4ff81;
   background-color: #f4ff81;
@@ -28,6 +32,7 @@
 
 #signIn {
   margin-top: 6%;
+  margin-right: 20px;
   border-radius: 0px;
 }
 
@@ -45,8 +50,14 @@
   height: auto;
 }
 
+#username {
+  /* padding-top: 12%; */
+  margin-right: 30px;
+  font-size: 16px;
+}
+
 #title3 {
-  margin-left: 1%;
+  margin: 2.5px 0px 0px 7px;
 }
 
 #img {
@@ -54,13 +65,6 @@
   margin: 2px 6px;
   max-width: 23%;
   height: auto;  
-}
-
-#username {
-  /* padding-top: 12%; */
-  margin-right: 30px;
-  margin-left: 2px;  
-  font-size: 18px;
 }
 
 #h-title {
